--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,11 @@ body {
 .main{
   background-color: #a812d9;
   width: 470px;
-height: 95vh;
+height: 100%;
 border-radius: 5px;
 color: white;
  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+ padding-bottom: 10px;
   
 }
 
