doc : doc added

--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@ body {
   font-family: 'Lato', sans-serif;
 }
 .main{
-  background-color: #a812d9;
+  background-color: white;
   width: 470px;
 height: 100%;
 border-radius: 5px;
-color: white;
- text-shadow: 1px 1px 2px rgb(0, 0, 0);
- padding-bottom: 10px;
+color: #414141;
+box-shadow:  0 1px 3px rgba(35, 2, 2, 0.731), 0 1px 2px rgba(0, 0, 0, 0.24);
+ padding : 20px;
   
 }
 
@@ -34,61 +34,21 @@ color: white;
 .header{
   text-align: center;
 padding-top: 10px;
-   text-shadow: 
-      -1px -1px 1px #efede3, 
-      0px 1px 0 #a812d9, 
-      0px 2px 0 #a812d9, 
-      0px 3px 0 #a812d9, 
-      0px 4px 0 #a812d9, 
-      0px 5px 0 #a812d9, 
-      0px 6px 0 #120816, 
-      0px 7px 0 #222, 
-      0px 8px 0 #202020, 
-      0px 9px 0 #1e1e1e, 
-      0px 10px 0 #1c1c1c, 
-      0px 11px 0 #1a1a1a, 
-      0px 12px 0 #181818, 
-      0px 13px 0 #151313, 
-      0px 14px 0 #141414, 
-      0px 15px 0 #181717,
-      2px 20px 5px rgba(179, 9, 218, 0.9),
-      5px 23px 5px rgba(180, 13, 213, 0.862),
-      8px 27px 8px rgba(147, 10, 206, 0.5),
-      8px 28px 35px rgba(253, 244, 244, 0.9);
-
+   
 
 }
 h1 {
   letter-spacing: 1px;
   margin: 0;
-  text-shadow: 
-      -1px -1px 1px #efede3, 
-      0px 1px 0 #a812d9, 
-      0px 2px 0 #a812d9, 
-      0px 3px 0 #a812d9, 
-      0px 4px 0 #a812d9, 
-      0px 5px 0 #a812d9, 
-      0px 6px 0 #120816, 
-      0px 7px 0 #222, 
-      0px 8px 0 #202020, 
-      0px 9px 0 #1e1e1e, 
-      0px 10px 0 #1c1c1c, 
-      0px 11px 0 #1a1a1a, 
-      0px 12px 0 #181818, 
-      0px 13px 0 #151313, 
-      0px 14px 0 #141414, 
-      0px 15px 0 #181717,
-      2px 20px 5px rgba(179, 9, 218, 0.9),
-      5px 23px 5px rgba(180, 13, 213, 0.862),
-      8px 27px 8px rgba(147, 10, 206, 0.5),
-      8px 28px 35px rgba(253, 244, 244, 0.9);
+ 
 }
 
 h3 {
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid #e3dddd;
   padding-bottom: 10px;
   margin: 40px 0 10px;
-  text-shadow: 1px 1px 2px rgb(19, 9, 11);
+   font-weight: 500;
+   font-size: 18px;
 }
 
 h4 {
@@ -148,7 +108,7 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #04555b5f;
+  background-color: black;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
@@ -156,9 +116,14 @@ input[type='number'] {
   font-size: 16px;
   margin: 10px 0 30px;
   padding: 10px;
-   text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  font-weight: 400;
   width: 100%;
   
+}
+.btn:hover{
+  background-color: #414141;
+  color: white;
+  transition: 0.5s;
 }
 
 .btn:focus,
@@ -175,7 +140,7 @@ input[type='number'] {
 .list li {
   background-color: #fff;
   box-shadow: var(--box-shadow);
-  color: #333;
+  color: black;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -193,7 +158,7 @@ input[type='number'] {
 
 .delete-btn {
   cursor: pointer;
-  background-color: #e74c3c;
+  background-color: red;
   border: 0;
   color: #fff;
   font-size: 20px;
@@ -208,6 +173,7 @@ input[type='number'] {
    text-shadow: 1px 1px 2px rgb(0, 0, 0);
    
 }
+
 
 .list li:hover .delete-btn {
   opacity: 1;
